# Paperstock

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  main.js  package-lock.json  package.json  preload.js
lib/: database.js  notion-sync.js  pdf-utils.js  settings.js
paperstock-tauri/: package.json
paperstock-tauri/src-tauri/: Cargo.toml  tauri.conf.json
paperstock-tauri/src-tauri/capabilities/: default.json
paperstock-tauri/src-tauri/icons/: icon.icns
paperstock-tauri/src-tauri/src/: db.rs  lib.rs  main.rs  menu.rs  models.rs  pdf_utils.rs
paperstock-tauri/src-tauri/src/commands/: bookmarks.rs  books.rs  comments.rs  files.rs  mod.rs  pdf.rs  tags.rs
paperstock-tauri/src/css/: index.css  viewer.css
paperstock-tauri/src/js/: bookshelf.js  viewer.js
src/: index.html  viewer.html
src/css/: index.css
src/js/: bookshelf.js
