[package]
name = "paperstock"
version = "2.0.0"
edition = "2021"

[lib]
name = "paperstock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
chrono = "0.4"
dirs = "6"
lopdf = "0.34"

[build-dependencies]
tauri-build = { version = "2", features = [] }
